Fixing alignment of sign-in and sign-up buttons by giving the sign-in button bottom padding

--- a/app/assets/stylesheets/modules/buttons.css.scss
+++ b/app/assets/stylesheets/modules/buttons.css.scss
@@ -3,6 +3,10 @@ a.btn {
   margin-bottom: 5px;
 }
 
+input.btn{
+  margin-bottom: 5px;
+}
+
 .btn-blue {
   background-color: $blue-reg;
   box-shadow: 0 5px 0 0 $blue-shadow;
